--- a/README
+++ b/README
@@ -1,26 +1,25 @@
-Buildroot is a simple, efficient and easy-to-use tool to generate embedded
-Linux systems through cross-compilation.
+This tool is based on Buildroot.  
 
-The documentation can be found in docs/manual. You can generate a text
-document with 'make manual-text' and read output/docs/manual/manual.text.
-Online documentation can be found at http://buildroot.org/docs.html
+To build the sdk, do the following
 
-To build and use the buildroot stuff, do the following:
+Clone the repo:
+git@10.1.30.30:Lalith/sdk.git
 
-1) run 'make menuconfig'
-2) select the target architecture and the packages you wish to compile
-3) run 'make'
-4) wait while it compiles
-5) find the kernel, bootloader, root filesystem, etc. in output/images
+Pick the minimal configuration. This will build quickly with the just the necessary tools / libs :
 
-You do not need to be root to build or run buildroot.  Have fun!
+cd sdk
+make sdk-minimal_defconfig
 
-Buildroot comes with a basic configuration for a number of boards. Run
-'make list-defconfigs' to view the list of provided configurations.
+kick off the build :
+make sdk
 
-Please feed suggestions, bug reports, insults, and bribes back to the
-buildroot mailing list: buildroot@buildroot.org
-You can also find us on #buildroot on Freenode IRC.
+<have a cup of tea>
 
-If you would like to contribute patches, please read
-https://buildroot.org/manual.html#submitting-patches
+When done, the sdk will be in output/images/sdk-xxxxxx.tar.gz
+(the xxxxxxx is the sdk repo git commit version)
+
+expand the tar file to your $(HOME), which will create a $(HOME)/sdk directory
+
+The rest of the builds (kernel, uboot, buildroot) refer to this $(HOME)/sdk to ensure consitancy
+
+Have fun
